added service to upload dictionary, and new service to get translations from memory dicts
